[package]
name = "echo-client-v1"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "echo-client"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["full"] }
tokio-tungstenite  = "0.24"
tungstenite        = "0.24"
futures-util       = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
uuid               = { version = "1", features = ["v4"] }
ratatui            = "0.29"
crossterm          = { version = "0.28", features = ["event-stream"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"
